[tool.poetry]
name = "donky"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "~3.9"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
tox = "^4.16.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
addopts = "--cov=donky"

[build-system]
requires = ["setuptools>=36.6.0", "wheel", 'pbr']

