[tool.poetry]
name = "donky"
readme = "README.md"
authors = ["Arunas Grigalinis <arunas.grigalionis@gmail.com>"]
description = "A database obfuscation tool"
version = "0.1.0a0"
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
sentry-sdk = "^2.7.1"
podman = "^5.0.0"
sqlalchemy = "^2.0.31"
pymysql = "^1.1.1"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
donky = "donky.cli:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
tox = "^4.16.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
addopts = "--cov=donky"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
